@@ -21,69 +21,75 @@ public class MemberServiceImpl implements MemberService {
     private final MemberRepository memberRepository;
     private final UserLikedMemberRepository userLikedMemberRepository;
 
+    /**
+     * 그룹에 속한 모든 멤버 조회 (좋아요 여부 포함)
+     */
     @Override
     public List<MemberResponseDto> getMembersByGroupId(Long userId, Long groupId) {
         if (groupId == null) {
             throw new GeneralException(ErrorStatus.GROUP_NAME_REQUIRED);
         }
 
-        boolean exists = memberRepository.existsByGroupId(groupId);
-        if (!exists) {
+        boolean groupExists = memberRepository.existsByGroupId(groupId);
+        if (!groupExists) {
             throw new GeneralException(ErrorStatus.GROUP_NOT_FOUND);
         }
 
+        // 그룹에 속한 모든 멤버 조회
         List<Member> members = memberRepository.findByGroupId(groupId);
+
         if (members.isEmpty()) {
             throw new GeneralException(ErrorStatus.MEMBER_NOT_FOUND);
         }
 
-        // 🔥 사용자가 관심 등록한 멤버 ID 리스트 조회
-        List<UserLikedMember> likedMembers = userLikedMemberRepository.findByUserIdAndGroupId(userId, groupId);
-        Set<Long> likedMemberIds = likedMembers.stream()
+        // 유저가 좋아요한 멤버들 ID 조회
+        Set<Long> likedMemberIds = userLikedMemberRepository.findByUserId(userId)
+                .stream()
                 .map(UserLikedMember::getMemberId)
                 .collect(Collectors.toSet());
 
-
-        // 🔥 전체 멤버에 대해 관심 여부 매핑해서 응답
+        // 멤버 정보 + 좋아요 여부 매핑
         return members.stream()
                 .map(m -> new MemberResponseDto(
                         m.getMemberId(),
                         m.getName(),
-                        likedMemberIds.contains(m.getMemberId())  // 관심 여부 체크
+                        likedMemberIds.contains(m.getMemberId())  // 좋아요 여부
                 ))
                 .collect(Collectors.toList());
     }
 
-
+    /**
+     * 그룹에 속한 좋아요한 멤버만 조회
+     */
     @Override
     public List<MemberResponseDto> getLikedMembersByGroupId(Long userId, Long groupId) {
         if (groupId == null) {
             throw new GeneralException(ErrorStatus.GROUP_NAME_REQUIRED);
         }
 
-        boolean likedGroupExists = userLikedMemberRepository.existsByUserIdAndGroupId(userId, groupId);
-        if (!likedGroupExists) {
-            throw new GeneralException(ErrorStatus.GROUP_NOT_FOUND);
-        }
-
-        List<UserLikedMember> likedMembers = userLikedMemberRepository.findByUserIdAndGroupId(userId, groupId);
+        // 유저가 좋아요한 모든 멤버 조회
+        List<UserLikedMember> likedMembers = userLikedMemberRepository.findByUserId(userId);
 
         if (likedMembers.isEmpty()) {
             throw new GeneralException(ErrorStatus.MEMBER_NOT_FOUND);
         }
 
-        // 관심 멤버 ID 리스트
         List<Long> likedMemberIds = likedMembers.stream()
                 .map(UserLikedMember::getMemberId)
-                .toList();
+                .collect(Collectors.toList());
 
-        List<Member> members = memberRepository.findAllById(likedMemberIds);
+        // 그룹에 속하면서, 좋아요한 멤버만 조회
+        List<Member> members = memberRepository.findByGroupIdAndMemberIdIn(groupId, likedMemberIds);
+
+        if (members.isEmpty()) {
+            throw new GeneralException(ErrorStatus.MEMBER_NOT_FOUND);
+        }
 
         return members.stream()
                 .map(m -> new MemberResponseDto(
                         m.getMemberId(),
                         m.getName(),
-                        true   // 🔥 여기선 무조건 true
+                        true // 여기는 무조건 좋아요한 멤버만 조회니까 true 고정
                 ))
                 .collect(Collectors.toList());
     }
